Added climpact scripts, notebooks
Added new climpact scripts to calculate HW metrics for AV paper
New Jupyterlab notebooks to calculate linear trend over future period
Added icclim scripts for BARRA

--- a/bxn599/evaluation/eval_icclim_barchart_ccam.ipynb
+++ b/bxn599/evaluation/eval_icclim_barchart_ccam.ipynb
@@ -70,7 +70,7 @@
     "# Data sources to consider here\n",
     "SOURCES = ['BARPA-R:ERA5', 'CCAM:ERA5', 'AGCD', 'ERA5']\n",
     "# Grid to used as the reference grid to compute difference metrics\n",
-    "REFERENCE_GRID = 'BARPA-R:ERA5'\n",
+    "REFERENCE_GRID = 'AGCD'\n",
     "# \"Truth\" for compute difference metrics\n",
     "REFERENCE = 'AGCD'\n",
     "# Region of interest, as per defined in lib_standards.DOMAINS\n",
@@ -141,15 +141,15 @@
     "        #ds_regrid[s] = lib_spatial.add_region_land_mask(ds[s], region)\n",
     "        ds_regrid[s] = ds[s]\n",
     "        \n",
-    "        #print(\"[0] {:} -> {:}\".format(s, ds_regrid[s]['SU'].min()))\n",
+    "        print(\"[0] {:} -> {:}\".format(s, ds_regrid[s]['SU'].min()))\n",
     "        if s == reference_grid:\n",
     "            ds_regrid[s] = ds_regrid[s].compute()\n",
     "        else:\n",
     "            ds_regrid[s] = lib_standards.regrid(ds_regrid[s], ds[reference_grid]).compute()\n",
-    "        #print(\"[1] {:} -> {:}\".format(s, ds_regrid[s]['SU'].min()))\n",
+    "        print(\"[1] {:} -> {:}\".format(s, ds_regrid[s]['SU'].min()))\n",
     "        \n",
     "        ds_regrid[s] = lib_spatial.apply_region_mask(ds_regrid[s], region)\n",
-    "        #print(\"[2] {:} -> {:}\".format(s, ds_regrid[s]['SU'].min()))\n",
+    "        print(\"[2] {:} -> {:}\".format(s, ds_regrid[s]['SU'].min()))\n",
     "        if apply_agcd_data_mask:\n",
     "            ds_regrid[s] = lib_spatial.apply_agcd_data_mask(ds_regrid[s])\n",
     "            #print(\"[3] {:} -> {:}\".format(s, ds_regrid[s]['SU'].min()))\n",
@@ -355,7 +355,9 @@
       "Reading the data CCAM:ERA5\n",
       "Reading the data AGCD\n",
       "Reading the data ERA5\n",
-      "Regridding the data BARPA-R:ERA5 to reference grid of BARPA-R:ERA5\n"
+      "Regridding the data BARPA-R:ERA5 to reference grid of AGCD\n",
+      "[0] BARPA-R:ERA5 -> 0\n",
+      "[1] BARPA-R:ERA5 -> 0\n"
      ]
     }
    ],
